--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Atividade</h1>
+    <h1>Atividade</h1><br>
     <button onclick="verdão()" id="verdo" > VERDE</button>
     <button onclick="vermei()" id="red"> VERMELHOOOO </button>
-    <button onclick="Nome()" id="aa"> Mostrar Nome </button>
-
+    <button onclick="Nome()" id="aa"> Nome </button>
+</form>
 </body>
 </html>
