--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
     <link rel="stylesheet" href="maquiagem.css">
     <script src="mojang.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mudaCorzinha</title>
+
+
+
 </head>
 <body>
-    <h1>Atividade</h1><br>
+  <div>  <h1>Atividade</h1>  
+<button onclick="reset()" id="res">Reset </button> </div>
+
+    <br>
     <button onclick="verdão()" id="verdo" > VERDE</button>
     <button onclick="vermei()" id="red"> VERMELHOOOO </button>
     <button onclick="Nome()" id="aa"> Nome </button>
+    <br> <img src="la2.png" id="imagem1" alt="imagem1"><br>
+
+   
 </form>
 </body>
 </html>
